--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "cssnano": "^4.0.2",
     "history": "^4.7.2",
     "invariant": "^2.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^3.7.1",
     "lodash": "^4.17.10",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "redux": "4.0.0",
+    "redux-saga": "0.16.0",
     "webpack-merge": "^4.1.3"
   }
 }
