--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,14 @@
     "react",
     "flow",
     "stage-0"
+  ],
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "polyfill": true,
+        "regenerator": true
+      }
+    ]
   ]
 }
