--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ss-framework",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index",
   "scripts": {
-    "build": "babel src -d dist"
+    "build": "rimraf dist & babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "url": "https://github.com/Paul-Long/ss-framework/issues"
   },
   "homepage": "https://github.com/Paul-Long/ss-framework#readme",
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^8.6.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -38,5 +38,9 @@
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "webpack-merge": "^4.1.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "rimraf": "^2.6.2"
   }
 }
