--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ss-framework",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "dist/index",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "build": "rimraf dist & babel src -d dist"
   },
@@ -28,19 +31,35 @@
     "history": "^4.7.2",
     "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
-    "less": "^3.7.1",
     "lodash": "^4.17.10",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "4.0.0",
     "redux-saga": "0.16.0",
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "rimraf": "^2.6.2"
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "happypack": "^5.0.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "4.1.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
