--- a/package.json
+++ b/package.json
@@ -20,46 +20,33 @@
   },
   "homepage": "https://github.com/Paul-Long/ss-framework#readme",
   "dependencies": {
-    "autoprefixer": "^8.6.5",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cssnano": "^4.0.2",
     "history": "^4.7.2",
-    "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.10",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "redux": "4.0.0",
-    "redux-saga": "0.16.0",
-    "webpack-merge": "^4.1.3"
+    "redux-saga": "0.16.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "happypack": "^5.0.0",
-    "less": "^3.7.1",
-    "less-loader": "^4.1.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "4.1.1",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "cssnano": "^4.0.3",
+    "gulp": "^3.9.1",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.10",
+    "rimraf": "^2.6.2"
+  },
+  "engines": {
+    "node": ">=8"
+
   }
-}
